--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/backgroundContainer.png
+  fonts:
+    - family: Rockwell
+      fonts:
+        - asset: fonts/ROCKB.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
